--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-query": "^5.85.0",
     "@types/fhir": "^0.0.41",
     "plotly.js": "^3.1.0",
-    "primereact": "^10.9.6",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-plotly.js": "^2.6.0"
