--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@tanstack/react-query": "^5.85.0",
     "@types/fhir": "^0.0.41",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.11.0",
+    "fhirclient": "^2.6.0",
     "plotly.js": "^3.1.0",
     "primereact": "^10.9.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-plotly.js": "^2.6.0"
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
